--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
     overflow-x: hidden;
     scroll-behavior: auto;
 }
-
+/* ---------- welcome section -------- */
 #welcome-section {
     width: 99vw;
     height: 100vh;
@@ -20,7 +20,7 @@ body{
 }
 
 #navbar {
-    width: 99vw;
+    width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -78,20 +78,20 @@ body{
 }
 
 .main-info h1 {
-    font-size: 8rem;
+    font-size: 4rem;
     color: white;
     font-family: 'Raleway';
     font-weight: 700;
 }
 
 .main-info p {
-    font-size: 5rem;
+    font-size: 3rem;
     color: red;
     font-style: italic;
     font-weight: 300;
     font-family: 'poppins';
 }
-
+/* ----------- project section --------- */
 .project-sec {
     width: 99vw;
     height: 130vh;
@@ -150,14 +150,11 @@ body{
 #profile-link img {
     width: 20vw;
     height: 30vw;
-    /* padding: 5px; */
+    /* background-size: cover; */
+    aspect-ratio: 5/3;
     object-fit: cover;
-    /* border: 2px solid red; */
     transition: ease-in-out 0.5s;
     border-radius: 15px 15px 0 0;
-    /* &:hover {
-        transform: scale(1.03);
-    } */
 }
 
 #project-title {
@@ -165,16 +162,14 @@ body{
     width: 100%;
     height: 25%;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     background-color: #303841;
     color: white;
     transition: all 0.3s;
     border-radius: 0px 0px 15px 15px;
-
     &:hover {
         background-color: #202022;
         color: rgb(222, 81, 81);
-        /* transform: scale(1.03); */
     }
 }
 .btn{
@@ -190,7 +185,7 @@ body{
         background-color: red;
     }
 }
-/* ---------- contact -------- */
+/* ------------ contact ---------- */
 .contact{
     width: 99vw;
     height: 50vh;
@@ -216,7 +211,6 @@ body{
 .icons{
     width: 70%;
     height: 40%;
-    /* border: 2px solid red; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -235,6 +229,7 @@ body{
         filter: invert(1);
     }
 }
+/* ----------- footer --------- */
 .footer{
     width: 99vw;
     height: 5vh;
@@ -266,16 +261,6 @@ body{
     body {
       background-color: lightblue;
     }
-    #video-background {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        min-width: 100%;
-        min-height: 100%;
-        z-index: -1;
-    }
     #welcome-section {
         width: 100vw;
         height: 100vh;
@@ -288,12 +273,16 @@ body{
         font-family: 'Raleway';
         font-weight: 700;
     }
-    /* #welcome-section {
-        width: 100vw;
-        height: 100vh;
-        background: url(./black-13495.mp4);
-        background-size: cover;
-    } */
+    .main-info p {
+        font-size: 2rem;
+        color: red;
+        font-style: italic;
+        font-weight: 300;
+        font-family: 'poppins';
+    }
+    #navbar ul {
+        gap: 5px;
+    }
     .project-sec h2 {
         font-size: 30px;
         text-align: center;
@@ -315,7 +304,6 @@ body{
         align-items: center;
         flex-direction: column;
         flex-wrap: wrap;
-        
     }
     #profile-link {
         height: 70vw;
@@ -324,7 +312,6 @@ body{
         width: 70vw;
     }
     #projects{
-        /* padding: 5px; */
         height: 60vh;
         width: 40vw;
         display: flex;
@@ -334,13 +321,10 @@ body{
     #project-title {
         width: 10vw;
         height: 8%;
-        border-radius: 15px 0px 0px 15px;
     }
     #profile-link img {
         width: 80%;
         height: 60%;
-        /* padding: 5px; */
-        background-repeat: no-repeat;
     }
     
     #project-title {
@@ -360,11 +344,7 @@ body{
     }
     .footer{
         height: 8vh;
-        background-color: #202022;
-        color: white;
         text-align: center;
-        display: flex;
-        justify-content: center;
         align-items: center;
     }
     .footer p{
